<resources>
    <string name="app_name">EOSWallet</string>
    <string name="eos">EOS</string>

    <string name="exit_app">再按一次退出程序</string>
    <string name="tab_wallet">钱包</string>
    <string name="tab_explore">探索</string>
    <string name="tab_mine">我的</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <!--钱包-->
    <string name="total_assets">总资产折合</string>
    <string name="receipt">收款</string>
    <string name="transfer">转账</string>

    <!--我的-->
    <string name="personal_center">个人中心</string>
    <string name="wallet_manage">钱包管理</string>
    <string name="message_manage">消息管理</string>
    <string name="security_center">安全中心</string>
    <string name="help_center">帮助中心</string>
    <string name="invite_friend">邀请好友</string>
    <string name="about_us">关于我们</string>
    <string name="system_settings">系统设置</string>

    <!--转账-->
    <string name="receipt_account">收款账号</string>
    <string name="input_account_hint">输入账号或长按粘贴地址</string>
    <string name="transfer_amount">转账数量</string>
    <string name="available_eos">可用 %f EOS</string>
    <string name="input_amount_hint">请输入金额</string>
    <string name="remarks">备注</string>
    <string name="all">全部</string>
    <string name="confirm">确认</string>

    <!--扫描-->
    <string name="scanner_title">扫码</string>
    <string name="scanner_tip">请将镜头对准二维码进行扫描</string>
    <string name="required_camera_permission">请在权限设置中勾选允许相机</string>

    <!--收款页面-->
    <string name="receipt_title">正在接收EOS</string>
    <string name="receipt_tail">扫描二维码，向我付款</string>
    <string name="share_to_friend">分享给好友</string>
    <string name="copy">复制</string>

    <!--币详情-->
    <string name="assets_format">%s资产</string>
    <string name="total_assets_format">总资产(%s)</string>
    <string name="current_price">当前价格 %s/CNY</string>
    <string name="trade_record">交易记录</string>

    <!--导入页面-->
    <string name="my_wallet">我的钱包</string>
    <string name="wallet_type">钱包体系</string>
    <string name="do_you_have_account">你是否有账号?</string>
    <string name="have_account">我有账号</string>
    <string name="have_no_account">我没有账号</string>
    <string name="import_account">导入账号</string>
    <string name="create_account">创建账号</string>

    <!--创建钱包-->
    <string name="create_wallet_tip">* 钱包密码用于保护私钥和交易授权，因此请尽量复杂\n* 我们不存储用户密码，因此无法帮您找回密码</string>
    <string name="wallet_type_eos">钱包体系：EOS底层</string>
    <string name="account_name">账号名称：</string>
    <string name="set_password">设置密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="i_have_read">我已仔细阅读并同意</string>
    <string name="server_licence">服务即隐私条款</string>
    <string name="create_wallet">创建钱包</string>
    <string name="password_type_1">弱</string>
    <string name="password_type_2">中</string>
    <string name="password_type_3">强</string>
    <string name="illegal_password">密法请勿包含非法字符</string>
    <string name="password_confirm_failed">两次输入密码不相同，请检查</string>
    <string name="enter_illegal_password">请输入至少8位数密码</string>
    <string name="enter_account_name">请输入账户名称</string>
    <string name="create_wallet_failed">创建钱包失败：</string>
    <string name="creating_wallet_tip">验证私钥成功，请等待自动分配账户...\n此过程大约需要1分钟......</string>

    <!--分配账号-->
    <string name="assign_account">分配账号</string>
    <string name="assign_account_tip">*EOS账户创建需要抵押（可以理解为押金）一部分资金，这部分由我们为您预先支付，因此您需要支付这部分押金 （约20个BHKD）</string>
    <string name="account_name_for_you">为您创建的账户用户名：</string>
    <string name="BHKD_balance">当前BHKD：%d 个</string>
    <string name="BHKD_tip">您可以通过场外交易购买BHKD并充值到上面专属账户下</string>
    <string name="refresh">刷新</string>
    <string name="active">激活</string>

    <!--导入钱包-->
    <string name="import_wallet">导入钱包</string>
    <string name="enter_private_key">请输入钱包私钥……</string>
    <string name="tip_for_password">提示信息：</string>
    <string name="start_import">开始导入</string>
    <string name="enter_password_tip">请输入密码提示信息</string>
    <string name="check_policy">请仔细阅读并同意服务即隐私条款</string>

    <!--检验私钥-->
    <string name="check_private_key">检验私钥</string>
    <string name="check_account">根据公钥检测账号</string>

    <!--备份私钥-->
    <string name="backup_private_key">备份私钥</string>
    <string name="backup_private_key_detail">* 私钥是找回钱包的唯一途径，请务必小心保管;\n* 我们不会存储您的私钥;\n* 请不要截图，尽量使用手抄，以免私钥泄露。</string>
    <string name="remembered">我记住了</string>
    <string name="check_your_private_key">确认你的钱包私钥</string>
    <string name="check_your_private_key_detail">请输入钱包私钥，验证备份的私钥是否正确</string>
    <string name="next_step">下一步</string>
    <string name="no_photo_title">请勿截图</string>
    <string name="no_photo_detail_1">*如果有人获得了你的私钥将直接获取你的资产！</string>
    <string name="no_photo_detail_2">*请抄写下并存放在安全的地方</string>
    <string name="known">我知道了</string>
    <string name="key_error">无效的私钥地址\n请确认是否抄写正确</string>
    <string name="illegal_private_key">私钥输入错误</string>
    <string name="check_failed">私钥验证错误\n请重新确认</string>
    <string name="check_success">验证私钥成功，请等待自动分配账户...\n此过程大约需要1分钟......</string>

    <!--交易详情-->
    <string name="transaction_details">交易详情</string>
    <string name="payer">发款人</string>
    <string name="payee">收款人</string>
    <string name="transaction_no">交易号</string>
    <string name="block_no">区块号</string>
    <string name="transaction_time">交易时间</string>
    <string name="query_details">查询详细详情</string>
    <string name="copied">已复制</string>
</resources>

