<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin">
        <EditText
            android:id="@+id/et_private_key"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:padding="15dp"
            android:textSize="@dimen/item_title_text_size"
            android:hint="@string/enter_private_key"
            android:background="@drawable/edit_text_big_bg"
            android:elevation="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:background="@android:color/white">

        <LinearLayout style="@style/SingleLineItemLayout">
            <TextView
                style="@style/ItemTitleTextView"
                android:text="@string/wallet_type_eos"/>
        </LinearLayout>
        <View style="@style/Divider" />

        <org.arpnetwork.eoswallet.ui.wallet.PasswordView
            android:id="@+id/v_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/Divider" />
        <LinearLayout style="@style/SingleLineItemLayout">
            <TextView
                style="@style/ItemTitleTextView"
                android:text="@string/tip_for_password"/>

            <EditText
                android:id="@+id/et_password_tip"
                style="@style/ItemEditTextView"/>

        </LinearLayout>
    </LinearLayout>

    <org.arpnetwork.eoswallet.ui.wallet.CheckPolicyView
        android:id="@+id/v_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin" />

    <Button
        android:id="@+id/btn_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:background="@drawable/round_corner_bg_solid_primary"
        android:textColor="@android:color/white"
        android:text="@string/start_import"/>

</LinearLayout>