<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <org.arpnetwork.eoswallet.ui.wallet.StepIndicatorView
            android:id="@+id/step_view"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin">

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/assign_account_tip"
                android:textColor="#666666"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/account_name_for_you"
                    android:textColor="@color/title_text_color"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_big_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_account_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/title_text_color"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="15dp"
                        android:background="@color/title_divider" />

                    <TextView
                        android:id="@+id/btn_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingRight="20dp"
                        android:text="@string/copy"
                        android:textColor="#666666"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/BHKD_balance"
                        android:textColor="#9A9A9A"
                        android:textSize="12sp" />

                    <FrameLayout
                        android:id="@+id/btn_refresh"
                        android:layout_width="44dp"
                        android:layout_height="21dp"
                        android:layout_marginLeft="10dp">

                        <TextView
                            android:id="@+id/tv_refresh"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@drawable/edit_text_big_bg"
                            android:textColor="#666666"
                            android:textSize="11sp"
                            android:text="@string/refresh"/>

                        <ProgressBar
                            android:id="@+id/pb_refresh"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone"/>
                    </FrameLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/BHKD_tip"
                    android:textColor="#666666"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_active"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:background="@drawable/round_corner_white_solid_primary_stroke_bg"
                android:text="@string/active"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>