<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/SingleLineItemLayout">
        <TextView
            style="@style/ItemTitleTextView"
            android:text="@string/set_password"/>
        <EditText
            android:id="@+id/et_password"
            style="@style/ItemEditTextView"
            android:inputType="textPassword"/>

        <ImageView
            android:id="@+id/iv_password_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:visibility="gone"
            android:src="@drawable/password_type_3"/>

        <TextView
            android:id="@+id/tv_password_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/tip_text_size"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:text="@string/password_type_3"/>

        <CheckBox
            android:id="@+id/cb_password_visible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:paddingRight="5dp"
            android:layout_gravity="center"
            android:button="@drawable/btn_show_password"/>
    </LinearLayout>
    <View style="@style/Divider" />

    <LinearLayout
        style="@style/SingleLineItemLayout">
        <TextView
            style="@style/ItemTitleTextView"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/ItemEditTextView"
            android:inputType="textPassword"/>
    </LinearLayout>
</LinearLayout>