<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_private_key"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:padding="15dp"
            android:textSize="@dimen/item_title_text_size"
            android:hint="@string/enter_private_key"
            android:background="@drawable/edit_text_big_bg"
            android:elevation="3dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_check_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_round_corner_bg"
        android:textColor="@android:color/white"
        android:text="@string/check_private_key"/>

    <TextView
        android:id="@+id/tv_public_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="#666666"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_check_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@drawable/btn_round_corner_bg"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:text="@string/check_account"/>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:textColor="#333333"
        android:textSize="14sp"
        android:visibility="gone"
        android:background="@drawable/edit_text_big_bg" />

</LinearLayout>