<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/action_bar_height"-->
        <!--android:background="@color/colorPrimary">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom|center_horizontal"-->
            <!--android:layout_marginBottom="14dp"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="@dimen/navigation_title_text_size"-->
            <!--android:text="@string/my_wallet"/>-->
    <!--</FrameLayout>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="19dp"
        android:paddingLeft="22dp"
        android:paddingRight="22dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/large_title_text_size"
            android:text="@string/do_you_have_account"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/large_subtitle_text_size"
                android:text="@string/wallet_type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/text_launch_bg"
                android:textSize="@dimen/large_subtitle_text_size"
                android:text="@string/eos"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_btn_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
        </LinearLayout>
    </LinearLayout>

</LinearLayout>